Add and update files

--- a/Lego_cleaning.ipynb
+++ b/Lego_cleaning.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,15 +291,17 @@
        "subtheme      object\n",
        "year           int64\n",
        "name          object\n",
+       "minifigs     float64\n",
        "pieces       float64\n",
        "price        float64\n",
        "image_url     object\n",
        "owned_by       int64\n",
        "wanted_by      int64\n",
+       "rating       float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -346,7 +348,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,15 +370,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace NaNs in 'subtheme' with 'Not Available'\n",
     "legoData['subtheme'] = legoData['subtheme'].fillna('Not Available')\n",
     "\n",
-    "# Replace NaNs in 'pieces' with 0\n",
-    "legoData['pieces'] = legoData['pieces'].fillna(0)\n",
+    "# Remove NaNs in 'pieces'\n",
+    "legoData = legoData.dropna(subset=['pieces'])\n",
     "\n",
     "# Replace NaNs in 'price' with 'pieces' * 0.08\n",
     "# 0.08 is a rough-guess for purchasing a brick based on Lego website\n",
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +406,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +448,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -490,7 +492,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,19 +504,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace NaNs in 'num_reviews', 'X_rating' with 0\n",
-    "legoData2['num_reviews'] = legoData2['num_reviews'].fillna(0)\n",
-    "legoData2['play_star_rating'] = legoData2['play_star_rating'].fillna(0)\n",
-    "legoData2['star_rating'] = legoData2['star_rating'].fillna(0)\n",
-    "legoData2['val_star_rating'] = legoData2['val_star_rating'].fillna(0)\n",
+    "# Remove NaNs in 'num_reviews'\n",
+    "legoData2 = legoData2.dropna(subset=['num_reviews'])\n",
     "\n",
     "# Replace NaN in 'review_difficulty', 'prod_desc' with 'Not Available'\n",
     "legoData2['review_difficulty'] = legoData2['review_difficulty'].fillna('Not Available')\n",
     "legoData2['prod_desc'] = legoData2['prod_desc'].fillna('Not Available')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove 'play_star_rating' & 'val_star_rating'\n",
+    "legoData2 = legoData2.drop(['play_star_rating', 'val_star_rating'], axis=1)"
    ]
   },
   {
@@ -526,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,44 +561,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace NaNs with 0 and 'Not Available'\n",
-    "dfLego['num_reviews'] = dfLego['num_reviews'].fillna(0)\n",
-    "dfLego['play_star_rating'] = dfLego['play_star_rating'].fillna(0)\n",
-    "dfLego['star_rating'] = dfLego['star_rating'].fillna(0)\n",
-    "dfLego['val_star_rating'] = dfLego['val_star_rating'].fillna(0)\n",
-    "\n",
-    "dfLego['prod_desc'] = dfLego['prod_desc'].fillna(\"Not Available\")\n",
-    "dfLego['review_difficulty'] = dfLego['review_difficulty'].fillna('Not Available')\n",
-    "dfLego['set_name'] = dfLego['set_name'].fillna('Not Available')"
+    "# Remove NaNs\n",
+    "dfLego = dfLego.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       False\n",
-       "1       False\n",
-       "2       False\n",
-       "3       False\n",
-       "4       False\n",
+       "695     False\n",
+       "696     False\n",
+       "697     False\n",
+       "701     False\n",
+       "702     False\n",
        "        ...  \n",
-       "2045    False\n",
-       "2046    False\n",
-       "2047     True\n",
-       "2048    False\n",
-       "2049    False\n",
-       "Length: 2050, dtype: bool"
+       "1919    False\n",
+       "1920    False\n",
+       "1921     True\n",
+       "1926    False\n",
+       "1927     True\n",
+       "Length: 660, dtype: bool"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,11 +620,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dfLego.to_csv ('lego_cleaned_set.csv', index = None, header=True)"
+    "dfLego.to_csv ('lego_cleaned_set.csv', index = None, header=True)"
    ]
   },
   {
