Updated and added files

--- a/Lego_cleaning.ipynb
+++ b/Lego_cleaning.ipynb
@@ -70,9 +70,8 @@
        "      <th>Subtheme</th>\n",
        "      <th>Year</th>\n",
        "      <th>Name</th>\n",
-       "      <th>Minifigs</th>\n",
        "      <th>Pieces</th>\n",
-       "      <th>USPrice</th>\n",
+       "      <th>Price</th>\n",
        "      <th>ImageURL</th>\n",
        "      <th>OwnedBy</th>\n",
        "      <th>WantedBy</th>\n",
@@ -82,58 +81,76 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>29682</td>\n",
-       "      <td>75267</td>\n",
+       "      <td>22812</td>\n",
+       "      <td>30224</td>\n",
        "      <td>1</td>\n",
-       "      <td>Star Wars</td>\n",
-       "      <td>The Mandalorian</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Mandalorian Battle Pack</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>14.99</td>\n",
-       "      <td>https://images.brickset.com/sets/images/75267-...</td>\n",
-       "      <td>2794</td>\n",
-       "      <td>3080</td>\n",
+       "      <td>City</td>\n",
+       "      <td>General</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Ride-On Lawn Mower</td>\n",
+       "      <td>42.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>https://images.brickset.com/sets/images/30224-...</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1746</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>29491</td>\n",
-       "      <td>76895</td>\n",
+       "      <td>22830</td>\n",
+       "      <td>21104</td>\n",
        "      <td>1</td>\n",
-       "      <td>Speed Champions</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Ferrari F8 Tributo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>275.0</td>\n",
-       "      <td>19.99</td>\n",
-       "      <td>https://images.brickset.com/sets/images/76895-...</td>\n",
-       "      <td>857</td>\n",
-       "      <td>2055</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Ideas</td>\n",
+       "      <td>NASA</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>NASA Mars Science Laboratory Curiosity Rover</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>https://images.brickset.com/sets/images/21104-...</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>2912</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>22888</td>\n",
+       "      <td>71002</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Collectable Minifigures</td>\n",
+       "      <td>Series 11</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>Saxophone Player</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>https://images.brickset.com/sets/images/71002-...</td>\n",
+       "      <td>5426</td>\n",
+       "      <td>2201</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   SetID Number  Variant            Theme         Subtheme  Year  \\\n",
-       "0  29682  75267        1        Star Wars  The Mandalorian  2020   \n",
-       "1  29491  76895        1  Speed Champions              NaN  2020   \n",
+       "   SetID Number  Variant                    Theme   Subtheme  Year  \\\n",
+       "0  22812  30224        1                     City    General  2013   \n",
+       "1  22830  21104        1                    Ideas       NASA  2014   \n",
+       "2  22888  71002       12  Collectable Minifigures  Series 11  2013   \n",
        "\n",
-       "                      Name  Minifigs  Pieces  USPrice  \\\n",
-       "0  Mandalorian Battle Pack       4.0   102.0    14.99   \n",
-       "1       Ferrari F8 Tributo       NaN   275.0    19.99   \n",
+       "                                           Name  Pieces  Price  \\\n",
+       "0                            Ride-On Lawn Mower    42.0    NaN   \n",
+       "1  NASA Mars Science Laboratory Curiosity Rover   295.0  29.99   \n",
+       "2                              Saxophone Player     6.0   2.99   \n",
        "\n",
        "                                            ImageURL  OwnedBy  WantedBy  \\\n",
-       "0  https://images.brickset.com/sets/images/75267-...     2794      3080   \n",
-       "1  https://images.brickset.com/sets/images/76895-...      857      2055   \n",
+       "0  https://images.brickset.com/sets/images/30224-...     1950      1746   \n",
+       "1  https://images.brickset.com/sets/images/21104-...     1983      2912   \n",
+       "2  https://images.brickset.com/sets/images/71002-...     5426      2201   \n",
        "\n",
        "   Rating  \n",
-       "0     NaN  \n",
-       "1     NaN  "
+       "0     4.0  \n",
+       "1     4.0  \n",
+       "2     4.0  "
       ]
      },
      "execution_count": 2,
@@ -142,8 +159,8 @@
     }
    ],
    "source": [
-    "legoData = pd.read_csv('lego2017_2020.csv')\n",
-    "legoData.head(2)"
+    "legoData = pd.read_csv('Data/lego_data.csv')\n",
+    "legoData.head(3)"
    ]
   },
   {
@@ -214,6 +231,20 @@
        "      <td>4.0</td>\n",
        "      <td>US</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>Chase the piggy with lightning-fast Chuck and ...</td>\n",
+       "      <td>75821</td>\n",
+       "      <td>Easy</td>\n",
+       "      <td>Piggy Car Escape</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>Angry Birds™</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -222,18 +253,22 @@
        "   num_reviews  piece_count  play_star_rating  \\\n",
        "0          2.0          277               4.0   \n",
        "1          2.0          168               4.0   \n",
+       "2         11.0           74               4.3   \n",
        "\n",
        "                                           prod_desc  prod_id  \\\n",
        "0  Catapult into action and take back the eggs fr...    75823   \n",
        "1  Launch a flying attack and rescue the eggs fro...    75822   \n",
+       "2  Chase the piggy with lightning-fast Chuck and ...    75821   \n",
        "\n",
        "  review_difficulty               set_name  star_rating    theme_name  \\\n",
        "0           Average  Bird Island Egg Heist          4.5  Angry Birds™   \n",
        "1              Easy     Piggy Plane Attack          5.0  Angry Birds™   \n",
+       "2              Easy       Piggy Car Escape          4.3  Angry Birds™   \n",
        "\n",
        "   val_star_rating country  \n",
        "0              4.0      US  \n",
-       "1              4.0      US  "
+       "1              4.0      US  \n",
+       "2              4.1      US  "
       ]
      },
      "execution_count": 3,
@@ -242,8 +277,8 @@
     }
    ],
    "source": [
-    "legoData2 = pd.read_csv('lego_sets.csv')\n",
-    "legoData2.head(2)"
+    "legoData2 = pd.read_csv('Data/lego_sets.csv')\n",
+    "legoData2.head(3)"
    ]
   },
   {
@@ -291,7 +326,6 @@
        "subtheme      object\n",
        "year           int64\n",
        "name          object\n",
-       "minifigs     float64\n",
        "pieces       float64\n",
        "price        float64\n",
        "image_url     object\n",
@@ -317,8 +351,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change type of 'setid'\n",
-    "legoData['setid'] = legoData['setid'].astype(str)"
+    "# Change type of 'setid', 'variant', 'year'\n",
+    "legoData['setid'] = legoData['setid'].astype(str)\n",
+    "legoData['variant'] = legoData['variant'].astype(str)\n",
+    "legoData['year'] = legoData['year'].astype(str)"
    ]
   },
   {
@@ -335,16 +371,15 @@
        "number          0\n",
        "variant         0\n",
        "theme           0\n",
-       "subtheme      519\n",
+       "subtheme     3864\n",
        "year            0\n",
        "name            0\n",
-       "minifigs      562\n",
-       "pieces        108\n",
-       "price         460\n",
+       "pieces       1076\n",
+       "price        4916\n",
        "image_url       0\n",
        "owned_by        0\n",
        "wanted_by       0\n",
-       "rating       1896\n",
+       "rating       5731\n",
        "dtype: int64"
       ]
      },
@@ -364,8 +399,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove 'Rating' & 'Minifigs' columns\n",
-    "legoData = legoData.drop(['rating', 'minifigs'], axis=1)"
+    "# Replace NaNs in 'subtheme' with 'Not Available'\n",
+    "legoData['subtheme'] = legoData['subtheme'].fillna('Not Available')\n",
+    "\n",
+    "# Remove NaNs in 'pieces'\n",
+    "legoData = legoData.dropna(subset=['pieces'])\n",
+    "\n",
+    "# Remove NaNs in 'rating'\n",
+    "legoData = legoData.dropna(subset=['rating'])\n",
+    "\n",
+    "# Replace NaNs in 'price' with 'pieces' * 0.08\n",
+    "# 0.08 is a rough-guess for purchasing a brick based on Lego website\n",
+    "legoData['price'] = legoData.apply(lambda row: row['pieces'] * 0.08 if np.isnan(row['price']) else row['price'],\n",
+    "                                   axis=1)"
    ]
   },
   {
@@ -374,16 +420,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace NaNs in 'subtheme' with 'Not Available'\n",
-    "legoData['subtheme'] = legoData['subtheme'].fillna('Not Available')\n",
-    "\n",
-    "# Remove NaNs in 'pieces'\n",
-    "legoData = legoData.dropna(subset=['pieces'])\n",
-    "\n",
-    "# Replace NaNs in 'price' with 'pieces' * 0.08\n",
-    "# 0.08 is a rough-guess for purchasing a brick based on Lego website\n",
-    "legoData['price'] = legoData.apply(lambda row: row['pieces'] * 0.08 if np.isnan(row['price']) else row['price'],\n",
-    "                                   axis=1)"
+    "# Revise 'number' column \n",
+    "legoData['number'] = legoData['number'] + '-' + legoData['variant']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove 'variant' column\n",
+    "legoData = legoData.drop(['variant'], axis=1)"
    ]
   },
   {
@@ -395,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +454,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +496,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,16 +504,6 @@
    "source": [
     "# Check variables' types\n",
     "legoData2.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Change type of 'prod_id'\n",
-    "legoData2['prod_id'] = legoData2['prod_id'].astype(str)"
    ]
   },
   {
@@ -518,97 +556,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove 'play_star_rating' & 'val_star_rating'\n",
-    "legoData2 = legoData2.drop(['play_star_rating', 'val_star_rating'], axis=1)"
+    "# Remove 'play_star_rating', 'val_star_rating', 'country'\n",
+    "legoData2 = legoData2.drop(['play_star_rating', 'val_star_rating', 'country'], axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Merged datasets"
+    "## 3. Merged datasets (don't execute)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfLego = pd.merge(legoData, \n",
-    "                  legoData2,\n",
-    "                  left_on='number',\n",
-    "                  right_on='prod_id',\n",
-    "                  how='left')"
+    "# dfLego = pd.merge(legoData, \n",
+    "#                   legoData2[['num_reviews', 'prod_desc', 'review_difficulty']],\n",
+    "#                   left_on='..',\n",
+    "#                   right_on='..',\n",
+    "#                   how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove duplicated columns ('piece_count', 'prod_id', 'theme_name')\n",
-    "dfLego = dfLego.drop(['piece_count', 'prod_id', 'theme_name'], axis=1)\n",
+    "# # Remove duplicated columns ('piece_count', 'prod_id', 'theme_name')\n",
+    "# dfLego = dfLego.drop(['piece_count', 'prod_id', 'theme_name'], axis=1)\n",
     "\n",
-    "# Remove 'country' column\n",
-    "dfLego = dfLego.drop(['country'], axis=1)"
+    "# # Remove 'country' column\n",
+    "# dfLego = dfLego.drop(['country'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove NaNs\n",
-    "dfLego = dfLego.dropna()"
+    "# # Remove NaNs\n",
+    "# dfLego = dfLego.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "695     False\n",
-       "696     False\n",
-       "697     False\n",
-       "701     False\n",
-       "702     False\n",
-       "        ...  \n",
-       "1919    False\n",
-       "1920    False\n",
-       "1921     True\n",
-       "1926    False\n",
-       "1927     True\n",
-       "Length: 660, dtype: bool"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Find deplicates\n",
-    "dfLego.duplicated('setid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove duplicates\n",
-    "dfLego = dfLego.drop_duplicates(['setid'])"
+    "# # Find deplicates\n",
+    "# dfLego.duplicated('setid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Remove duplicates\n",
+    "# dfLego = dfLego.drop_duplicates(['setid'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Change type of 'variant'\n",
+    "# dfLego['variant'] = dfLego['variant'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Revise 'number' column\n",
+    "# dfLego['number'] = dfLego['number'] + '-' + dfLego['variant']"
    ]
   },
   {
@@ -620,11 +656,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfLego.to_csv ('lego_cleaned_set.csv', index = None, header=True)"
+    "legoData.to_csv('Data/lego_clean_data_v1.csv', index=None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legoData2.to_csv('Data/lego_clean_data_v2.csv', index=None, header=True)"
    ]
   },
   {
